# remove-bg

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: fs.py  main.py  processor.py
